Fix layout bug

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ select {
 
 body {
   display: flex;
-  height: 100vh;
+  height: 100%;
 }
 
 /* hero sidebar */
@@ -58,7 +58,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   width: 38%;
   position: relative;
 }
@@ -103,7 +103,7 @@ body {
 }
 
 #content > * {
-  padding: 2rem 3rem;
+  padding: 2.5rem 3rem;
 }
 
 #content h3:not(:last-child),
